--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+/* Import font from https://fonts.google.com/specimen/Nunito+Sans */
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,600,800');
+
+:root {
+    --very-light-gray: hsl(0, 0%, 98%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: var(--very-light-gray);
+    font-family: 'Nunito Sans', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 4%;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.mode-toggle {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    height: 30px;
+    margin: auto 0;
 }
 
-.App-link {
-  color: #61dafb;
+.mode-toggle img {
+    padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 4%;
+}
+
+.search {
+    display: flex;
+    background-color: white;
+    border-radius: 5px;
+    width: 400px;
+    /* Add shadow around */
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+    align-items: center;
+}
+
+.search img {
+    height: 20px;
+    padding-left: 20px;
+}
+
+input {
+    background-color: transparent;
+    border: none;
+    padding: 15px;
+    width: 100%;
+}
+
+input:focus-visible, select:focus-visible {
+    outline: none;
+}
+
+select {
+    background-color: white;
+    border: none;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+    width: 175px;
+    padding: 0 10px;
+    border-right: 5px solid transparent;
+}
+
+select * {
+    padding: 10px;
 }
